@@ -222,7 +222,6 @@ void GnomeCmdUserActions::init()
     register_action(GDK_F7, "file.mkdir");
     register_action(GDK_F8, "file.delete");
     // register_action(GDK_F9, "edit.search");     //  do not register F9 here, as edit.search action wouldn't be checked for registration later
-    // register_action(GDK_F10, "file.exit");      //  do not register F10 here, as file.exit action wouldn't be checked for registration later
 
     load("key-bindings");
 
@@ -334,9 +333,6 @@ void GnomeCmdUserActions::init()
 
     unregister(GDK_F9);                                 // unregister F9 if defined in [key-bindings]
     register_action(GDK_F9, "edit.search");             // and overwrite it with edit.search action
-
-    unregister(GDK_F10);                                // unregister F10 if defined in [key-bindings]
-    register_action(GDK_F10, "file.exit");              // and overwrite it with file.exit action
  }
 
 
@@ -351,7 +347,6 @@ void GnomeCmdUserActions::shutdown()
     unregister(GDK_F7);
     unregister(GDK_F8);
     unregister(GDK_F9);
-    unregister(GDK_F10);
 
     write("key-bindings");
 
